解决LLM和ARG问题